feat: add public peer insight
